@@ -56,6 +56,16 @@ static void print_help_where( void );
  * @{
  */
 
+///////////////////////////////////////////////////////////////////////////////
+
+// local constants
+static char const *const HELP_OPTIONS[] = {
+  L_commands,
+  L_english,
+  L_options,
+  NULL
+};
+
 ////////// inline functions ///////////////////////////////////////////////////
 
 /**
@@ -628,6 +638,10 @@ static void print_help_where( void ) {
 
 ////////// extern functions ///////////////////////////////////////////////////
 
+char const* const* help_option_next( char const *const *option ) {
+  return option == NULL ? HELP_OPTIONS : *++option == NULL ? NULL : option;
+}
+
 bool print_help( char const *what, c_loc_t const *what_loc ) {
   assert( what_loc != NULL );
 
@@ -654,8 +668,8 @@ bool print_help( char const *what, c_loc_t const *what_loc ) {
   //
   cdecl_command_t const *const command = cdecl_command_find( mapped_what );
   if ( command == NULL || strcmp( mapped_what, command->literal ) != 0 ) {
-    print_error( what_loc, "\"%s\": no such command", what );
-    print_suggestions( DYM_COMMANDS, what );
+    print_error( what_loc, "\"%s\": no such command or option", what );
+    print_suggestions( DYM_COMMANDS | DYM_HELP_OPTIONS, what );
     EPUTC( '\n' );
     return false;
   }
